<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/Ename"
        android:hint="Name"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:layout_marginBottom="5sp"
        android:inputType="textPersonName"
    android:layout_margin="10sp"
        android:theme="@style/EditTextTheme"/>

    <EditText
        android:id="@+id/Eemail"
        android:hint="Email"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="5sp"
        android:layout_marginBottom="5sp"
        android:inputType="text"
        android:layout_margin="10sp"
        android:theme="@style/EditTextTheme"/>

    <EditText
        android:id="@+id/Epass"
        android:hint="Password"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="5sp"
        android:layout_marginBottom="5sp"
        android:inputType="textPassword"
        android:layout_margin="10sp"
        android:theme="@style/EditTextTheme"/>

    <EditText
        android:id="@+id/Echeckpass"
        android:hint="Verify your password"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="5sp"
        android:layout_marginBottom="5sp"
        android:inputType="textPassword"
        android:layout_margin="10sp"
        android:theme="@style/EditTextTheme"/>

    <Button
        android:id="@+id/regbutton"
        android:layout_width="match_parent"
        android:background="@drawable/change_color"
        android:layout_height="wrap_content"
        android:text="Register" />
</LinearLayout>