...
        android:layout_marginTop="15dp"
        android:layout_below="@id/myCoursesButton"
        android:textSize="20dp"
        android:onClick="onClick"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:text="Course List" />


</RelativeLayout>
