<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:maxWidth="42dp"
        android:maxHeight="42dp"
        android:scaleType="fitCenter"
        android:src="@drawable/logo" />

    <EditText
        android:id="@+id/Elogemail"
        android:gravity="center_horizontal"
        android:hint="Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="5sp"
        android:layout_marginBottom="5sp"
        android:inputType="textEmailAddress|textVisiblePassword"
        android:layout_margin="10sp"
        android:theme="@style/EditTextTheme"/>

        <EditText
            android:id="@+id/Elogpass"
            android:gravity="center_horizontal"
            android:hint="Password"
            android:fontFamily="sans-serif"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="5sp"
            android:layout_marginBottom="5sp"
            android:inputType="textPassword"
            android:layout_margin="10sp"
            android:theme="@style/EditTextTheme"/>

    <Button
        android:id="@+id/loginbutton"
        android:layout_marginTop="5sp"
        android:layout_marginBottom="5sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/change_color"
        android:text="Login" />

    <TextView
        android:id="@+id/VSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Don't have an account?"
        android:textSize="15sp"
        android:layout_gravity="center"
        />

    <TextView
        android:id="@+id/createaccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign up here!"
        android:textSize="15sp"
        android:layout_gravity="center"

        android:layout_marginBottom="10sp"
        android:onClick="onClick"
        android:clickable="true"
        />

</LinearLayout>

